--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-tooltip": "^4.2.21",
     "react-uuid": "^1.0.2",
     "redux": "^4.2.0",
+    "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
