--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "redux": "^4.2.0",
     "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.4.1",
+    "sweetalert2": "^11.4.10",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
